--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prettier": "3.6.2"
   },
   "dependencies": {
-    "dotenv": "^17.2.3"
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0"
   }
 }
